--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -233,15 +233,20 @@
         }
         .panorama {
           position: relative;
-          &::before {
+          /*&::before {
             content: @360;
             transition: opacity 400ms linear;
             position: absolute;
-          }
+          }*/
         }
         .link-wrap {
           margin-top: 15px;
           padding: 0 40px;
+          .flat_name {
+            font-size: 20px;
+            line-height: 1.2;
+            color: #333333;
+          }
           .link {
             font-size: 20px;
             line-height: 1.2;
