--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -11,3 +11,28 @@ textarea.form-control {
     border-right: 1px solid #cccccc;
     border-bottom: 2px solid #cccccc;
 }
+
+
+.file-preview-image {
+    max-width: 100%;
+    max-height: 160px;
+    min-height: 50px;
+}
+
+
+.skin-blue .sidebar-menu>li.header {
+    font-size: 16px;
+    color: #ffffff;
+}
+
+
+
+/*Были удалены все шрифты кроме Arial, sans-serif*/
+
+
+/*
+Временно скрытые блоки и элементы*/
+
+.breadcrumb,   .fileinput-remove.fileinput-remove-button,   .navbar-custom-menu {
+    display: none;
+}
