--- a/public/dev/less/mobile/index.less
+++ b/public/dev/less/mobile/index.less
@@ -431,6 +431,7 @@
 @media screen and (max-width: 340px) {
   .apartments {
     .panorams {
+      padding: 200px 0 0;
       .panoram-item-wrap {
         .panoram-item {
           padding: 0 10px;
