--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -25,6 +25,28 @@ textarea.form-control {
     color: #ffffff;
 }
 
+.login-button {
+    margin-top: 3px;
+}
+
+
+.btn.btn-primary.btn-file {
+    border-radius: 3px;
+}
+
+.form-group .file-preview-frame:not(.file-preview-error):hover {
+    -webkit-box-shadow: 1px 1px 5px 0 #a2958a;
+    -moz-box-shadow: 1px 1px 5px 0 #a2958a;
+    box-shadow: 1px 1px 5px 0 #a2958a;
+}
+.form-group .file-preview-frame:not(.file-preview-error) .file-footer-caption:hover {
+    color: #777777;
+}
+
+
+.main-footer .alert h4 {
+    margin-bottom: 0;
+}
 
 
 /*Были удалены все шрифты кроме Arial, sans-serif*/
