--- a/public/dev/less/core/mixins.less
+++ b/public/dev/less/core/mixins.less
@@ -40,18 +40,20 @@
   }
 }
 
+b {
+  font-weight: normal;
+  font-family: @bold;
+}
+strong{
+  font-weight: normal;
+  font-family: @bold;
+}
 .text-block{
   p, blockquote{
     color: #666666;
     line-height: 1.5em;
     width: 100%;
     font-size: 16px;
-    bold{
-      font-weight: bold;
-    }
-    strong{
-      font-weight: bold;
-    }
     a{
       .link(@link-color,@link-border,@hover-color,@hover-border);
     }
@@ -79,7 +81,7 @@
     font-size: 16px;
     color: #333333;
     line-height: 1.2em;
-    font-weight:bold;
+    font-family: @bold;
   }
   h5{
     color: #333333;
@@ -97,9 +99,7 @@
       a{
         .link(@link-color,@link-border,@hover-color,@hover-border);
       }
-      strong{
-        font-weight: bold;
-      }}
+    }
   }
   ol{
     list-style-type: decimal;
@@ -112,9 +112,6 @@
       font-size: 16px;
       a{
         .link(@link-color,@link-border,@hover-color,@hover-border);
-      }
-      strong{
-        font-weight: bold;
       }
     }
   }
