--- a/public/css/fotorama.css
+++ b/public/css/fotorama.css
@@ -131,7 +131,7 @@
 
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-resolution: 2dppx) {
     .fotorama__arr, .fotorama__fullscreen-icon, .fotorama__video-close, .fotorama__video-play {
-        background: url(../img/fotorama@2x.png) 0 0/96px 160px no-repeat
+        /*background: url(../img/fotorama@2x.png) 0 0/96px 160px no-repeat*/
     }
 }
 
