--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -167,6 +167,9 @@
   .text-block {
     margin-left: 140px;
     min-width: 160px;
+    color: #666666;
+    line-height: 1.5em;
+    font-size: 16px;
     &:last-child {
       margin-left: 80px;
     }
