Исправлены отступы активного элемента планировок

--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -64,7 +64,7 @@
       .link-wrap {
         margin: 7px 20px;
         &.active {
-          margin: 7px 0;
+          margin: 7px 15px;
           a {
             color: #333333;
             background: #ebe6c8;
