--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -390,11 +390,33 @@
     display: none;
   }
 }
-
+.map-img-wrap {
+  text-align: center;
+  background: #f7f5e9;
+  margin-top: 45px;
+  width: 100%;
+  height: 85vh;
+  min-height: 335px;
+  max-height: 640px;
+  .map-img {
+    max-height: 100%;
+    max-width: 1200px;
+    width: 100%;
+    height: 640px;
+    overflow: hidden;
+    object-fit: cover;
+  }
+}
 .mobile, .tablet {
   #map {
     height: 60vh;
     min-height: 195px;
+  }
+  .map-img-wrap {
+    height: 60vh;
+    min-height: 195px;
+    .map-img {
+    }
   }
   .on-map {
     .time-to-place {
