Add button for download layout PDF

--- a/public/dev/less/mobile/flat.less
+++ b/public/dev/less/mobile/flat.less
@@ -4,7 +4,7 @@
   }
 
   .flat-description {
-    padding: 65px 30px 70px;
+    padding: 65px 30px 0;
   }
 }
 
@@ -190,7 +190,7 @@
   }
 
   .flat-description {
-    padding: 65px 20px 70px;
+    padding: 65px 20px 0;
   }
 }
 
