--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -158,7 +158,7 @@
   }
 }
 .flat-description {
-  padding: 65px 100px 70px;
+  padding: 65px 100px 0;
   display: flex;
   line-height: 1.6;
   .scheme {
@@ -168,10 +168,25 @@
     margin-left: 140px;
     min-width: 160px;
     color: #666666;
-    line-height: 1.5em;
+    line-height: 1.5;
     font-size: 16px;
     &:last-child {
       margin-left: 80px;
+    }
+    strong, b {
+      color: #333333;
+    }
+  }
+}
+.download-wrap {
+  text-align: center;
+  padding: 30px 0 70px;
+  .download {
+    color: #333333;
+    padding: 12px 10px;
+    background-color: #ffcc66;
+    &:hover {
+      background: #ffd480;
     }
   }
 }
