Many little changes

--- a/public/dev/less/desctop/footer.less
+++ b/public/dev/less/desctop/footer.less
@@ -1,6 +1,5 @@
 .footer {
   background: #f7f5e9;
-  font-size: 14px;
   .bottom-row {
     max-width: 1200px;
     -webkit-box-sizing: border-box;
@@ -10,9 +9,11 @@
     padding: 40px 50px;
     display: flex;
     justify-content: space-between;
+    -webkit-justify-content: space-between;
     .bottom-text {
       &:nth-child(3) {
         flex-grow: 0.5;
+        -webkit-flex-grow: 0.5;
         text-align: right;
       }
       .soc-links {
