--- a/public/dev/less/mobile/advantages.less
+++ b/public/dev/less/mobile/advantages.less
@@ -2,6 +2,7 @@
   .advantages {
     padding: 0 50px;
     justify-content: space-between;
+    -webkit-justify-content: space-between;
   }
 }
 
@@ -24,6 +25,7 @@
 @media screen and (max-width: 700px) {
   .advantages {
     flex-direction: column;
+    -webkit-flex-direction: column;
     .col-1-2 {
       max-width: none;
       &:first-child {
