--- a/public/dev/less/mobile/footer.less
+++ b/public/dev/less/mobile/footer.less
@@ -2,6 +2,7 @@
   .footer {
     .bottom-row {
       flex-wrap: wrap;
+      -webkit-flex-wrap: wrap;
       padding: 25px 50px 40px;
       line-height: 1.5;
       .bottom-text {
