--- a/public/dev/less/mobile/index.less
+++ b/public/dev/less/mobile/index.less
@@ -8,7 +8,9 @@
     }
     .panorams {
       flex-wrap: wrap;
+      -webkit-flex-wrap: wrap;
       justify-content: center;
+      -webkit-justify-content: center;
       background-position-x: calc(~"45% - 219px");
       padding-top: 200px;
       margin-top: 0;
@@ -190,7 +192,9 @@
     .panorams {
       padding-top: 230px;
       flex-direction: column;
+      -webkit-flex-direction: column;
       align-items: center;
+      -webkit-align-items: center;
       background-position-x: calc(~"65% - 219px");
       background-position-y: 25px;
       .panoram-item-wrap {
@@ -230,7 +234,9 @@
 @media screen and (max-width: 590px) {
   .conditions {
     flex-direction: column;
+    -webkit-flex-direction: column;
     align-items: center;
+    -webkit-align-items: center;
     .condition-item {
       width: 80%;
       min-width: 280px;
@@ -258,7 +264,9 @@
 
   .interesting-place {
     flex-direction: column;
+    -webkit-flex-direction: column;
     align-items: center;
+    -webkit-align-items: center;
     .interesting-item {
       width: auto;
     }
@@ -268,7 +276,9 @@
     .on-map {
       .map-nav {
         flex-direction: column;
+        -webkit-flex-direction: column;
         align-items: center;
+        -webkit-align-items: center;
         font-size: 18px;
         .delimiter {
           display: none;
@@ -280,7 +290,9 @@
       .time-to-place {
         .circles-wrap {
           justify-content: center;
+          -webkit-justify-content: center;
           flex-wrap: wrap;
+          -webkit-flex-wrap: wrap;
           .circle {
             &:nth-child(2) {
               margin-left: 55px;
@@ -310,7 +322,9 @@
   .gallery {
     .gallery-nav {
       flex-direction: column;
+      -webkit-flex-direction: column;
       align-items: center;
+      -webkit-align-items: center;
       font-size: 18px;
       .delimiter {
         display: none;
@@ -411,7 +425,9 @@
       .time-to-place {
         .circles-wrap {
           flex-direction: column;
+          -webkit-flex-direction: column;
           align-items: center;
+          -webkit-align-items: center;
           .circle {
             &:not(:first-child) {
               margin: 35px 0 0;
