--- a/public/dev/less/desctop/advantages.less
+++ b/public/dev/less/desctop/advantages.less
@@ -1,6 +1,7 @@
 .advantages {
   display: flex;
   justify-content: center;
+  -webkit-justify-content: center;
   padding: 0 50px 0 110px;
   margin-bottom: 100px;
   .col-1-2 {
@@ -56,7 +57,7 @@
         .text {
           margin-top: 15px;
           line-height: 1.3;
-          font-size: 18px;
+          font-size: 20px;
           color: inherit;
         }
       }
