--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -6,12 +6,15 @@
   .room-count-row {
     display: flex;
     flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     justify-content: center;
+    -webkit-justify-content: center;
     text-align: center;
     .room-count-item {
       margin: 30px 30px 0;
       .link-wrap {
         display: inline-block;
+        font-size: 20px;
         &.active {
           margin: 0;
           a {
@@ -22,7 +25,6 @@
         }
       }
       .flat-size {
-        font-size: 12px;
         margin-top: 10px;
       }
     }
@@ -49,7 +51,6 @@
       }
       .sum {
         color: inherit;
-        font-size: 18px;
         font-family: @bold;
         padding: 0 20px;
       }
@@ -57,10 +58,12 @@
     .layouts {
       display: flex;
       justify-content: center;
+      -webkit-justify-content: center;
       flex-wrap: wrap;
+      -webkit-flex-wrap: wrap;
       margin: 0 auto;
       max-width: 700px;
-      font-size: 18px;
+      font-size: 20px;
       .link-wrap {
         margin: 7px 20px;
         &.active {
@@ -79,6 +82,7 @@
 .layout-map {
   display: flex;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   margin-top: 15px;
   padding: 0 65px;
   .layout-img {
@@ -107,23 +111,26 @@
         }
         .row {
           margin-top: 10px;
+          line-height: 1.5;
+          .baks {
+            white-space: nowrap;
+          }
         }
       }
     }
     .legend {
       width: 260px;
       background: #f7f5e9;
-      padding: 10px 20px 20px 25px;
+      padding: 10px 20px 20px;
       margin-top: 30px;
-      font-size: 14px;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       .designation {
         position: relative;
-        padding-left: 35px;
         &:not(:last-child) {
           margin-top: 15px;
+          padding-left: 35px;
         }
         &::before {
           position: absolute;
@@ -147,10 +154,12 @@
         }
         &.mu {
           margin-top: 45px;
-          line-height: 1.5;
+          line-height: 1.2;
+          text-align: center;
           &::before {
             content: @strock;
-            top: 6px;
+            top: -25px;
+            left: ~'calc(50% - 27px)';
           }
         }
       }
