--- a/public/dev/less/desctop/header.less
+++ b/public/dev/less/desctop/header.less
@@ -9,9 +9,10 @@
   .top {
     display: flex;
     justify-content: space-between;
+    -webkit-justify-content: space-between;
     .consult {
       margin-top: 10px;
-      width: 245px;
+      width: 210px;
       .top-text {
         color: #999999;
       }
@@ -28,7 +29,7 @@
     }
     .phones {
       margin-top: 10px;
-      width: 245px;
+      width: 210px;
       text-align: right;
       .top-text {
         color: #999999;
@@ -37,10 +38,11 @@
         position: relative;
         margin-top: 6px;
         color: #666666;
-        font-size: 28px;
+        font-size: 24px;
         &::before {
           content: @top_tel;
           position: absolute;
+          top: -1px;
           left: -37px;
         }
       }
@@ -49,6 +51,7 @@
   .menu {
     display: flex;
     justify-content: center;
+    -webkit-justify-content: center;
     margin-top: 55px;
     font-size: 20px;
     -webkit-user-select: none;
