--- a/public/dev/less/mobile/header.less
+++ b/public/dev/less/mobile/header.less
@@ -7,17 +7,13 @@
 @media screen and (max-width: 900px) {
   .header {
     .top {
-      .consult {
-        width: 210px;
-      }
       .phones {
-        width: 210px;
         .tel-num {
           margin-top: 9px;
           font-size: 24px;
           &::before {
             top: -2px;
-            left: -30px;
+            left: -33px;
           }
         }
       }
@@ -76,12 +72,14 @@
   .header {
     .top {
       flex-wrap: wrap;
+      -webkit-flex-wrap: wrap;
       .consult {
         margin-top: 35px;
       }
       .logo {
         width: 100%;
         order: -1;
+        -webkit-order: -1;
         text-align: center;
       }
       .phones {
@@ -116,7 +114,9 @@
   .header {
     .menu {
       flex-direction: column;
+      -webkit-flex-direction: column;
       align-items: center;
+      -webkit-align-items: center;
       font-size: 18px;
       .delimiter {
         display: none;
