--- a/public/dev/less/other/popup.less
+++ b/public/dev/less/other/popup.less
@@ -6,20 +6,20 @@
   border: 3px solid #ff9530;
   border-radius: 15px;
   &#thanks{
-    padding: 70px;
+    padding: 45px 40px;
     .popup-title{
       text-align: center;
       font-family: "Arial", sans-serif;
-      font-size: 36px;
-      line-height: 1.1;
+      font-size: 24px;
       color: #333333;
-      margin-bottom:65px;
+      margin-bottom:35px;
       font-weight:normal;
     }
     .sub-title-text{
       font-family: "Arial", sans-serif;
       font-size: 16px;
       color: #666666;
+      line-height: 1.5;
     }
   }
   .popup-title{
@@ -33,10 +33,12 @@
     padding-top: 20px;
     display: flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
     .row{
       margin-bottom:20px;
       display: flex;
       justify-content: space-between;
+      -webkit-justify-content: space-between;
       &.button-row{
         .col-1-2{
           .status-bar{
@@ -55,21 +57,23 @@
             text-align: right;
             .send-form{
               background: #ffcc66;
+              font-size: 16px;
               color: #333333;
               padding: 10px 20px;
               border: none;
               border-radius: 3px;
-              &:hover{
+              &:hover, &:focus{
                 cursor: pointer;
                 background: #ffd480;
+                outline: none ;
               }
             }
             .send-form.load{
-              background: url(../img/default.svg) center center no-repeat, #0078bf;
+              background: url(../img/default.svg) center center no-repeat, #aaaaaa;
               background-size: 38px 38px;
               color: transparent;
-              width: 136px;
-              height: 40px;
+              width: 126px;
+              height: 38px;
               padding: 0;
             }
 
