Main page adapt verified

--- a/public/dev/less/mobile/footer.less
+++ b/public/dev/less/mobile/footer.less
@@ -1,10 +1,9 @@
 @media screen and (max-width: 1000px) {
-  .footer {
+  /*.footer {
     .bottom-row {
       flex-wrap: wrap;
       -webkit-flex-wrap: wrap;
       padding: 25px 50px 40px;
-      line-height: 1.5;
       .bottom-text {
         margin-top: 15px;
         &:nth-child(1) {
@@ -15,7 +14,7 @@
         }
       }
     }
-  }
+  }*/
 }
 
 @media screen and (max-width: 820px) {
