--- a/public/dev/less/desctop/footer.less
+++ b/public/dev/less/desctop/footer.less
@@ -7,14 +7,22 @@
     box-sizing: border-box;
     margin: 0 auto;
     padding: 40px 50px;
+    line-height: 1.5;
     display: flex;
     justify-content: space-between;
     -webkit-justify-content: space-between;
     .bottom-text {
-      &:nth-child(3) {
-        flex-grow: 0.5;
-        -webkit-flex-grow: 0.5;
+      &.left {
+        max-width: 230px;
+      }
+      &.center {
+        text-align: center;
+      }
+      &.right {
+        /*flex-grow: 0.5;
+        -webkit-flex-grow: 0.5;*/
         text-align: right;
+        width: 230px;
       }
       .soc-links {
         a {
