--- a/public/dev/less/mobile/header.less
+++ b/public/dev/less/mobile/header.less
@@ -46,18 +46,18 @@
     .top {
       .consult {
         .question {
-          font-size: 22px;
+          font-size: 20px;
           &::after {
             top: 2px;
-            left: 160px;
+            left: 150px;
           }
         }
       }
       .phones {
         .tel-num {
-          font-size: 22px;
+          font-size: 20px;
           &::before {
-            left: -15px;
+            left: 0;
           }
         }
       }
