Small changes and footer adaptive

--- a/public/dev/less/desctop/advantages.less
+++ b/public/dev/less/desctop/advantages.less
@@ -34,6 +34,7 @@
         margin-top: 15px;
         line-height: 1.2;
         text-align: left;
+        padding: 0;
       }
       .text-block {
         margin-top: 20px;
