--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -108,6 +108,7 @@
         .title {
           font-family: @bold;
           color: #333333;
+          padding: 0;
         }
         .row {
           margin-top: 10px;
