--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -363,6 +363,7 @@
     margin-left: 340px;
     .title {
       text-align: left;
+      padding: 0;
     }
     .col-1, .col-2 {
       display: inline-block;
@@ -493,7 +494,7 @@
   }
   .time-to-place {
     position: relative;
-    background: #f7f5e9;
+    background: #e7f6d5;
     max-width: 1200px;
     margin: 0 auto;
     .circles-wrap {
@@ -545,7 +546,7 @@
 
 .viewing {
   padding: 90px 0 160px;
-  background: #f7f5e9;
+  background: #e7f6d5;
   text-align: center;
   .view-desc {
     width: 450px;
