--- a/public/dev/less/mobile/footer.less
+++ b/public/dev/less/mobile/footer.less
@@ -24,7 +24,45 @@
     }
   }
 }
-
+@media screen and (max-width: 720px) {
+  .footer {
+    .bottom-row {
+      font-size: 14px;
+      .bottom-text {
+        /*&.left {
+        }
+        &.center {
+          order: -1;
+          -webkit-order: -1;
+          width: 100%;
+          margin-bottom: 20px;
+        }
+        &.right {
+          width: auto;
+        }*/
+      }
+    }
+  }
+}
+@media screen and (max-width: 620px) {
+  .footer {
+    .bottom-row {
+      .bottom-text {
+        &.left {
+        }
+        &.center {
+          order: -1;
+          -webkit-order: -1;
+          width: 100%;
+          margin-bottom: 25px;
+        }
+        &.right {
+          width: auto;
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: 430px) {
   .footer {
     .bottom-row {
