--- a/public/dev/less/mobile.less
+++ b/public/dev/less/mobile.less
@@ -19,7 +19,10 @@
   .seo-text {
     padding: 40px 20px;
   }
-  .white-popup .popup-title {
-    font-size: 26px;
+  .white-popup {
+    padding: 30px 9% 15px;
+    .popup-title {
+      font-size: 26px;
+    }
   }
 }
