--- a/public/dev/less/mobile/flat.less
+++ b/public/dev/less/mobile/flat.less
@@ -87,6 +87,25 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .top-flat-navigation {
+    .room-count-row {
+      .room-count-item {
+        .link-wrap {
+          font-size: 18px;
+        }
+        .flat-size {
+          font-size: 14px;
+        }
+      }
+    }
+    .layout-row {
+      .layouts {
+        font-size: 18px;
+      }
+    }
+  }
+}
 @media screen and (max-width: 670px) {
   .layout-map {
     .right-block {
@@ -114,7 +133,25 @@
     }
   }
 }
-
+@media screen and (max-width: 635px) {
+  .top-flat-navigation {
+    .room-count-row {
+      .room-count-item {
+        .link-wrap {
+          font-size: 16px;
+        }
+        .flat-size {
+          font-size: 12px;
+        }
+      }
+    }
+    .layout-row {
+      .layouts {
+        font-size: 16px;
+      }
+    }
+  }
+}
 @media screen and (max-width: 600px) {
   .layout-map {
     .right-block {
@@ -143,13 +180,6 @@
         width: 100%;
         padding-bottom: 40px;
         margin-top: 20px;
-        .designation {
-          &.mu {
-            &::before {
-              top: -8px;
-            }
-          }
-        }
       }
     }
   }
@@ -160,7 +190,43 @@
     }
   }
 }
-
+@media screen and (max-width: 555px) {
+  .top-flat-navigation {
+    .room-count-row {
+      .room-count-item {
+        .link-wrap {
+          font-size: 18px;
+        }
+        .flat-size {
+          font-size: 14px;
+        }
+      }
+    }
+    .layout-row {
+      .layouts {
+        font-size: 18px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 510px) {
+  .layout-map {
+    padding: 0 20px;
+    .right-block {
+      .flat-conditions {
+        .conditions-item {
+          width: 100%;
+          &:nth-child(2) {
+            margin-right: 0;
+            .title {
+              margin-top: 30px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: 450px) {
   .flat-description {
     .text-block {
@@ -182,15 +248,6 @@
             margin-right: 0;
             .title {
               margin-top: 30px;
-            }
-          }
-        }
-      }
-      .legend {
-        .designation {
-          &.mu {
-            &::before {
-              top: 3px;
             }
           }
         }
