--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -50,7 +50,7 @@
   margin-top: 20px;
   padding: 0 120px;
   .title {
-    margin-bottom: 45px;
+    margin: 50px 0 5px;
   }
   .condition-item {
     width: 260px;
@@ -71,7 +71,7 @@
 
 .good-place-img {
   position: relative;
-  margin-top: 105px;
+  margin-top: 75px;
   padding: 0 30px;
   .row, .flower {
     display: block;
@@ -90,12 +90,12 @@
   margin-bottom: 90px;
 }
 .gallery {
-  margin-top: 85px;
+  margin-top: 75px;
   .gallery-nav {
     display: flex;
     justify-content: center;
     -webkit-justify-content: center;
-    margin-top: 40px;
+    margin-top: 30px;
     font-size: 20px;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -154,7 +154,7 @@
 }
 
 .more-news {
-  margin-top: 85px;
+  margin-top: 75px;
   padding: 40px 25px;
   background: #e7f6d5;
   .social-buttons {
@@ -190,7 +190,7 @@
 }
 
 .apartments {
-  margin-top: 100px;
+  margin-top: 75px;
   .row {
     position: relative;
     .price {
@@ -219,7 +219,7 @@
   .clarification {
     max-width: 450px;
     padding: 0 30px;
-    margin: 15px auto 0;
+    margin: 30px auto 0;
     line-height: 1.5;
     text-align: center;
   }
@@ -245,7 +245,7 @@
         .panoram-item {
           .panorama {
             &::before {
-              /*content: '';*/
+              content: '';
               opacity: 0;
               transition: opacity 200ms linear;
             }
@@ -259,7 +259,7 @@
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-        /*&:hover {
+        &:hover {
           -webkit-box-shadow: 0 8px 27px 3px #999;
           -moz-box-shadow: 0 8px 27px 3px #999;
           box-shadow: 0 8px 27px 3px #999;
@@ -267,7 +267,7 @@
           .flat-description {
             display: block;
           }
-        }*/
+        }
         .panorama {
           position: relative;
           overflow: hidden;
@@ -322,6 +322,7 @@
           display: none;
           margin-top: 18px;
           line-height: 1.5;
+          padding: 0;
         }
       }
     }
@@ -355,7 +356,7 @@
 
 .buying {
   max-width: 1200px;
-  margin: 65px auto 0;
+  margin: 75px auto 0;
   padding: 45px 0 60px;
   background: @baloon no-repeat 160px 15px;
   .text-wrap {
@@ -385,7 +386,7 @@
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   max-width: 1000px;
-  margin: 90px auto 0 auto;
+  margin: 75px auto 0 auto;
   padding: 0 50px;
   .interesting-item {
     margin-top: 50px;
@@ -460,7 +461,7 @@
 }
 
 .on-map {
-  margin-top: 70px;
+  margin-top: 75px;
   .title {
     padding: 0 15px;
   }
@@ -468,7 +469,7 @@
     display: flex;
     justify-content: center;
     -webkit-justify-content: center;
-    margin-top: 45px;
+    margin-top: 30px;
     font-size: 20px;
     -webkit-user-select: none;
     -moz-user-select: none;
