Css change in advantages

--- a/public/dev/less/desctop/advantages.less
+++ b/public/dev/less/desctop/advantages.less
@@ -19,6 +19,9 @@
     &:last-child {
       .advantages-item {
         margin-top: 95px;
+        &:first-child {
+          margin-top: 25px;
+        }
         .green-block {
           margin-top: 95px;
         }
