--- a/public/dev/less/mobile/advantages.less
+++ b/public/dev/less/mobile/advantages.less
@@ -31,6 +31,13 @@
       &:first-child {
         margin-right: 0;
       }
+      &:last-child {
+        .advantages-item {
+          &:first-child {
+            margin-top: 95px;
+          }
+        }
+      }
     }
   }
 }
