--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -170,27 +170,44 @@
 .flat-description {
   padding: 65px 100px 0;
   display: flex;
-  line-height: 1.6;
   .scheme {
     text-align: center;
+    min-width: 240px;
+  }
+  .text-blocks{
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 160px;
+    .with-balcony{
+      margin-top: 30px;
+      width: 100%;
+      line-height: 1.5;
+      .with-balcony-text{
+      }
+    }
   }
   .text-block {
-    margin-left: 140px;
-    min-width: 160px;
+    min-width: 170px;
     color: #666666;
     line-height: 1.5;
     font-size: 16px;
-    &:last-child {
+    &:nth-child(2) {
       margin-left: 80px;
+      width: 50%;
     }
     strong, b {
       color: #333333;
     }
   }
 }
+.visual-row{
+  margin: 30px 65px 0 100px;
+  border-bottom: 0;
+  border-top: 1px solid #cccccc;
+}
 .download-wrap {
   text-align: center;
-  padding: 30px 0 70px;
+  padding: 60px 0 60px;
   .download {
     color: #333333;
     padding: 12px 10px;
