--- a/public/dev/less/desctop/header.less
+++ b/public/dev/less/desctop/header.less
@@ -1,3 +1,14 @@
+.banner {
+  margin: 0 auto;
+  max-width: 1200px;
+  line-height: 0;
+
+  .banner-desktop {
+  }
+  .banner-mobile {
+    display: none;
+  }
+}
 .header {
   margin: 0 auto;
   max-width: 1200px;
