--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -260,9 +260,9 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         &:hover {
-          -webkit-box-shadow: 0 8px 27px 3px #999;
-          -moz-box-shadow: 0 8px 27px 3px #999;
-          box-shadow: 0 8px 27px 3px #999;
+          -webkit-box-shadow: 0 8px 27px 3px rgba(0, 0, 0, 0.25);
+          -moz-box-shadow: 0 8px 27px 3px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 8px 27px 3px rgba(0, 0, 0, 0.25);
           padding-bottom: 45px;
           .flat-description {
             display: block;
