--- a/public/dev/less/mobile/header.less
+++ b/public/dev/less/mobile/header.less
@@ -109,7 +109,16 @@
     }
   }
 }
-
+@media screen and (max-width: 600px) {
+  .banner {
+    .banner-desktop {
+      display: none;
+    }
+    .banner-mobile {
+      display: block;
+    }
+  }
+}
 @media screen and (max-width: 555px) {
   .header {
     .menu {
