--- a/public/dev/less/mobile/header.less
+++ b/public/dev/less/mobile/header.less
@@ -1,6 +1,6 @@
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
   .header {
-    background-position: center -15px;
+    background: none;
   }
 }
 
