--- a/public/dev/less/desctop/advantages.less
+++ b/public/dev/less/desctop/advantages.less
@@ -7,24 +7,11 @@
   .col-1-2 {
     max-width: 400px;
     min-width: 290px;
-    &:first-child {
-      margin-right: 100px;
-      .advantages-item {
-        margin-top: 25px;
-        .green-block {
-          margin-top: 45px;
-        }
-      }
-    }
-    &:last-child {
-      .advantages-item {
-        margin-top: 95px;
-        &:first-child {
-          margin-top: 25px;
-        }
-        .green-block {
-          margin-top: 95px;
-        }
+    margin-right: 100px;
+    .advantages-item {
+      margin-top: 25px;
+      .green-block {
+        margin-top: 45px;
       }
     }
     .advantages-item {
@@ -69,6 +56,7 @@
   }
 }
 
+/*
 .advantage-page {
   .buying {
     padding: 75px 0 70px;
@@ -85,4 +73,4 @@
       }
     }
   }
-}
+}*/
