--- a/public/dev/less/desctop/footer.less
+++ b/public/dev/less/desctop/footer.less
@@ -28,6 +28,10 @@
         a:not(:first-child) {
           margin-left: 15px;
         }
+        
+        .soc-link{
+          color: #999;
+        }
       }
     }
   }
