--- a/public/dev/less/mobile/common.less
+++ b/public/dev/less/mobile/common.less
@@ -1,3 +1,8 @@
+@media screen and (max-width: 820px) {
+  .shadow {
+    background-size: 100%;
+  }
+}
 @media screen and (max-width: 420px) {
   h1 {
     font-size: 32px;
