--- a/public/dev/less/mobile/header.less
+++ b/public/dev/less/mobile/header.less
@@ -4,26 +4,9 @@
   }
 }
 
-@media screen and (max-width: 900px) {
-  .header {
-    .top {
-      .phones {
-        .tel-num {
-          margin-top: 9px;
-          font-size: 24px;
-          &::before {
-            top: -2px;
-            left: -33px;
-          }
-        }
-      }
-    }
-  }
-}
-
 @media screen and (max-width: 820px) {
   .header {
-    padding: 30px 30px 60px 30px;
+    padding: 30px 30px 25px 30px;
     .top {
       .consult {
         margin-top: 40px;
@@ -45,18 +28,23 @@
   .header {
     .top {
       .consult {
+        width: 210px;
+
         .question {
           font-size: 20px;
           &::after {
             top: 2px;
-            left: 150px;
+            left: 170px;
           }
         }
       }
       .phones {
+        width: 210px;
+
         .tel-num {
           font-size: 20px;
           &::before {
+            top: -4px;
             left: 0;
           }
         }
@@ -174,7 +162,7 @@
 
 @media screen and (max-width: 420px) {
   .header {
-    padding: 20px 15px 60px 15px;
+    padding: 20px 15px 25px 15px;
   }
 }
 
