Advantages page, change big-title on image in greem block

--- a/public/dev/less/desctop/advantages.less
+++ b/public/dev/less/desctop/advantages.less
@@ -40,11 +40,11 @@
         text-align: center;
         color: #333333;
         background-color: #e7f6d5;
-        .big-title {
+        /*.big-title {
           font-size: 64px;
           line-height: 1;
           color: inherit;
-        }
+        }*/
         .text {
           margin-top: 15px;
           line-height: 1.3;
