Gallery height reduced

--- a/public/dev/less/mobile/index.less
+++ b/public/dev/less/mobile/index.less
@@ -144,6 +144,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  #scroller {
+    bottom: 10%;
+  }
   .good-place-img {
     .row:nth-child(2) {
       display: block;
