--- a/public/dev/less/other/fotorama.less
+++ b/public/dev/less/other/fotorama.less
@@ -1,3 +1,13 @@
+// Special for Eurasia
+
+/*.fotorama__stage .fotorama__img {
+    width: auto !important;
+    height: 100% !important;
+    max-height: 80vh !important;
+}*/
+
+////////////////////
+
 .fotorama__arr:focus:after, .fotorama__fullscreen-icon:focus:after, .fotorama__html, .fotorama__img, .fotorama__nav__frame:focus .fotorama__dot:after, .fotorama__nav__frame:focus .fotorama__thumb:after, .fotorama__stage__frame, .fotorama__stage__shaft, .fotorama__video iframe {
     position: absolute;
     width: 100%;
@@ -188,6 +198,7 @@
     -webkit-text-size-adjust: 100%;
     position: relative;
     direction: ltr;
+    margin: 0 auto;
     z-index: 0
 }
 
