--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -1,7 +1,7 @@
 #scroller {
   bottom: 15%;
-  left: 0;
-  margin-left: 84%;
+  right: 0;
+  margin-right: 97%;
   position: fixed;
   width: 1%;
   z-index: 1000;
@@ -128,7 +128,7 @@
     }
   }
   .gallery-images {
-    margin-top: 35px;
+    margin: 35px auto 0;
     height: 100%;
     .fotorama:not(:first-child) {
       display: none;
