--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -293,7 +293,7 @@
           position: relative;
           overflow: hidden;
           width: 300px;
-          /*&::before {
+          &::before {
             content: @360;
             transition: opacity 400ms linear;
             position: absolute;
@@ -306,7 +306,7 @@
             position: absolute;
             left: 0;
             top: 0;
-          }*/
+          }
           img {
             vertical-align: bottom;
           }
