--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -76,7 +76,13 @@
     }
   }
 }
-
+.mobile{
+  .layout-map {
+    .layout-img {
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+    }
+  }
+}
 .layout-map {
   display: flex;
   justify-content: space-between;
