--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -96,6 +96,7 @@
     transition: box-shadow .4s ease;
     &:hover{
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+      cursor: -webkit-zoom-in;
     }
 
     &:after {
