--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -98,6 +98,11 @@
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
       cursor: -webkit-zoom-in;
     }
+    &.zoom{
+      &:hover{
+        cursor: -webkit-zoom-out;
+      }
+    }
 
     &:after {
       content:'';
