--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -97,10 +97,12 @@
     &:hover{
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
       cursor: -webkit-zoom-in;
+      cursor: zoom-in;
     }
     &.zoom{
       &:hover{
         cursor: -webkit-zoom-out;
+        cursor: zoom-out;
       }
     }
 
