--- a/public/dev/less/style.less
+++ b/public/dev/less/style.less
@@ -14,6 +14,7 @@
 
 @import 'desctop/index';
 @import 'desctop/flat';
+@import 'desctop/calculator';
 @import 'desctop/advantages';
 
 @import 'other/fotorama';
