--- a/public/dev/less/desctop/calculator.less
+++ b/public/dev/less/desctop/calculator.less
@@ -1,5 +1,6 @@
 .calculator{
   max-width: 480px;
+  padding-bottom: 40px;
 
   &__title{
     color: #333333;
@@ -26,7 +27,61 @@
     color: #333333;
   }
 
+  &__layout-area-list{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 330px;
+  }
+
+  &__layout-area-item{
+    margin: 10px 10px 0 0;
+  }
+
+  &__layout-area-btn{
+    font-family: "ArialBold";
+    width: 55px;
+    height: 40px;
+    box-sizing: border-box;
+    color: #666666;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+    text-align: center;
+
+    &--active{
+      color: #FFFFFF;
+      background-color: #333333;
+      border: 1px solid #333333;
+    }
+  }
+
   &__flat-cost{}
+
+  &__contribution-row{
+    margin-top: 10px;
+  }
+
+  &__contribution-input{
+    width: 260px;
+    height: 40px;
+    padding: 0 15px;
+    box-sizing: border-box;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+    color: #666666;
+    outline: none;
+
+    &::placeholder{
+      color: #999999;
+    }
+  }
+
+  &__contribution-dollar{
+    margin-left: 10px;
+    color: #666666;
+  }
 
   &__clarification{
     color: #999999;
@@ -37,6 +92,8 @@
       background-color: #ffe0b2;
     }
   }
+
+  &__digit-incrementer{}
 
   &__calc{
     margin-top: 20px;
@@ -58,5 +115,38 @@
 
   &__payment-dollar{
     color: #999999;
+  }
+}
+
+
+.digit-incrementer{
+  display: flex;
+  margin-top: 5px;
+
+  &__button{
+    width: 40px;
+    height: 40px;
+    color: #333333;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    font-size: 24px;
+    line-height: 1;
+
+    &:hover{
+      border: 1px solid #999999;
+    }
+  }
+
+  &__result{
+    width: 55px;
+    height: 40px;
+    box-sizing: border-box;
+    color: #666666;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    margin: 0 10px;
+    text-align: center;
   }
 }
