--- a/public/dev/less/desctop/calculator.less
+++ b/public/dev/less/desctop/calculator.less
@@ -20,6 +20,10 @@
 
   &__row{
     margin-top: 25px;
+
+    &--payment{
+      opacity: 0;
+    }
   }
 
   &__row-title{
@@ -113,7 +117,7 @@
     font-size: 36px;
   }
 
-  &__payment-dollar{
+  &__payment-dollar-wrap{
     color: #999999;
   }
 }
