--- a/public/dev/less/desctop/calculator.less
+++ b/public/dev/less/desctop/calculator.less
@@ -9,7 +9,7 @@
   }
 
   &__layout-name{
-    margin-top: 25px;
+    margin-top: 20px;
   }
 
   &__hr{
@@ -19,7 +19,7 @@
   }
 
   &__row{
-    margin-top: 25px;
+    margin-top: 20px;
 
     &--payment{
       opacity: 0;
@@ -60,7 +60,9 @@
     }
   }
 
-  &__flat-cost{}
+  &__flat-cost{
+    margin-top: 5px;
+  }
 
   &__contribution-row{
     margin-top: 10px;
@@ -76,6 +78,10 @@
     box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.25);
     color: #666666;
     outline: none;
+
+    &:hover{
+      border: 1px solid #999999;
+    }
 
     &::placeholder{
       color: #999999;
@@ -97,7 +103,9 @@
     }
   }
 
-  &__digit-incrementer{}
+  &__digit-incrementer{
+    margin-top: 10px;
+  }
 
   &__calc{
     margin-top: 20px;
@@ -125,7 +133,6 @@
 
 .digit-incrementer{
   display: flex;
-  margin-top: 5px;
 
   &__button{
     width: 40px;
@@ -136,6 +143,7 @@
     background-color: #FFFFFF;
     font-size: 24px;
     line-height: 1;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
 
     &:hover{
       border: 1px solid #999999;
@@ -152,5 +160,6 @@
     background-color: #FFFFFF;
     margin: 0 10px;
     text-align: center;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
   }
 }
