--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -146,9 +146,13 @@
           .baks {
             white-space: nowrap;
           }
+          .calculator-link{
+            font-family: @bold;
+          }
         }
       }
     }
+
     .legend {
       width: 260px;
       background: #f7f5e9;
