--- a/public/dev/less/mobile.less
+++ b/public/dev/less/mobile.less
@@ -6,6 +6,7 @@
 
 @import 'mobile/index';
 @import 'mobile/flat';
+@import 'mobile/calculator';
 @import 'mobile/advantages';
 
 
@@ -19,7 +20,7 @@
   .seo-text {
     padding: 40px 20px;
   }
-  .white-popup {
+  .white-popup:not(.calculator) {
     padding: 30px 9% 15px;
     .popup-title {
       font-size: 26px;
