--- a/public/dev/less/desctop/header.less
+++ b/public/dev/less/desctop/header.less
@@ -16,7 +16,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 50px 50px 25px;
-  background: url("../img/header_back.png") no-repeat top center / 100%;
+  background: url("../img/header_back.jpg") no-repeat top center / 100%;
   .top {
     display: flex;
     justify-content: space-between;
