--- a/public/dev/less/desctop/index.less
+++ b/public/dev/less/desctop/index.less
@@ -174,21 +174,21 @@
         margin-left: 20px;
       }
       &.fb {
-        /*&:hover {
+        &:hover {
           background-position: 240px 0;
-        }*/
+        }
       }
       &.inst {
         background-position: 192px 0;
-        /*&:hover {
+        &:hover {
           background-position: 144px 0;
-        }*/
+        }
       }
       &.vk {
         background-position: 96px 0;
-        /*&:hover {
+        &:hover {
           background-position: 48px 0;
-        }*/
+        }
       }
     }
   }
