--- a/public/dev/less/desctop/flat.less
+++ b/public/dev/less/desctop/flat.less
@@ -148,6 +148,16 @@
           }
           .calculator-link{
             font-family: @bold;
+            margin-top: 20px;
+            padding: 10px 15px;
+            background-color: #f90;
+            color: #fff;
+            -webkit-border-radius: 3px;
+            border-radius: 3px;
+            border: none;
+            outline: 0;
+            line-height: 1;
+            display: inline-block;
           }
         }
       }
